# PM6-ML_ASE_calculator

./: .gitignore  README.md  mopac_ase.py  pyproject.toml  test_interaction_energy.py  test_torchnet_grad.py
devel_cuby_comparison/: cuby.yaml  cuby_d3.yaml  cuby_ml.yaml
pm6ml/: __init__.py  pm6mlcalculator.py  torchmdnetcalculator.py
tests/: test_forces.py  test_interaction_energy.py  test_torchnet_grad.py  test_unknown_element.py  unknown_element.xyz
