[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pm6ml"
version = "0.1"
description = "ASE calculator implementing PM6-ML"
authors = [
	{name = "Jan Rezac"}
]
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"ase",
	"mopac"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.urls]
"Homepage" = "https://github.com/Honza-R/PM6-ML_ASE_calculator"

[tool.pytest.ini_options]
testpaths = ['tests']
